# find_similar_photo

./: .gitignore  README.md  app.py  clip_vector_db.py  path_utils.py  pyproject.toml  pyproject_sample.toml  run_app.sh
